--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,37 @@
 {
-    "manifest_version": 3,
-    "name": "Accessibility Rater", 
-    "description": "Rates the website based on Accessibility features and rank them.",
-    "version": "1.0", 
-    "icons":{
-        "128": "logo/logo.png"
+  "manifest_version": 3,
+  "name": "Access Lens",
+  "description": "Web accessibility made easy - accessibility ratings, text simplification, translation, and more",
+  "version": "1.0",
+  "icons": {
+    "128": "logo/logo.png"
+  },
+  "author": "ONeal",
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://www.google.com/search*",
+        "https://www.google.ca/search*"
+      ],
+      "js": ["index.js"]
     },
-    "author": "ONeal",
-    "content_scripts": [
-        {
-            "matches": ["https://www.google.com/search*",
-                        "https://www.google.ca/search*"
-            ],
-            "js": ["index.js"]
-        }
-    ],
-    "background": {
-        "service_worker": "background.js"
-    },
-    "host_permissions": ["<all_urls>"],
-    "permissions":[
-        "activeTab", 
-        "scripting"
-    ]
-    
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
+    }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "host_permissions": ["<all_urls>"],
+  "permissions": ["activeTab", "scripting", "contextMenus", "storage"],
+  "web_accessible_resources": [
+    {
+      "resources": ["fonts/*.otf", "fonts/*.ttf"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
